tests/test_assets/semantic/invalid/mutation/statement_only_arguments.cog
takes_i32::(value: i32) -> void {
}

test::() -> void {
    x: i32 = 0;

    takes_i32(x = 1);
    takes_i32(x += 1);
    takes_i32(x++);
}