tests/test_assets/semantic/invalid/mutation/statement_only_arguments.expected
semantic error at line 7: assignment cannot be used as a value; it is a statement
semantic error at line 8: compound assignment cannot be used as a value; it is a statement
semantic error at line 9: increment/decrement cannot be used as a value; it is a statement
3 semantic errors generated.
